--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,4 @@
-*{
+/* *{
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -96,4 +96,8 @@ footer {
   text-align: center;
   padding: 10px 0;
   height: 50px;
-}
+} */
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
